# Pi5

./: README.md
AIKit/: CV.h  Hailo.h  Main.cpp  README.md  meson.build
AIKit/DepthEstimation/: DepthEstimation.sln  Main.cpp  download_resource.bat  download_resource.sh  meson.build
AIKit/DepthEstimation/DepthEstimation/: DepthEstimation.vcxproj  DepthEstimation.vcxproj.filters
AIKit/InstanceSegmentation/: InstanceSegmentation.sln  Main.cpp  download_resource.bat  download_resource.sh  meson.build  meson_setup.sh
AIKit/InstanceSegmentation/InstanceSegmentation/: InstanceSegmentation.vcxproj  InstanceSegmentation.vcxproj.filters
AIKit/Props/: CV.props  HAILORT.props
AIKit/Segmentation/: Main.cpp  meson.build  meson_compile.sh
IMX500/: README.md
